--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,4 +9,13 @@
         android:name="com.example.assignment3.PromptFragment"
         android:label="fragment_prompt"
         tools:layout="@layout/fragment_prompt" />
+    <fragment
+        android:id="@+id/menuFragment"
+        android:name="com.example.assignment3.MenuFragment"
+        android:label="fragment_menu"
+        tools:layout="@layout/fragment_menu" >
+        <action
+            android:id="@+id/action_menuFragment_to_promptFragment"
+            app:destination="@id/promptFragment" />
+    </fragment>
 </navigation>
