--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,11 @@
         android:id="@+id/promptFragment"
         android:name="com.example.assignment3.PromptFragment"
         android:label="fragment_prompt"
-        tools:layout="@layout/fragment_prompt" />
+        tools:layout="@layout/fragment_prompt" >
+        <action
+            android:id="@+id/action_promptFragment_to_draftFragment"
+            app:destination="@id/draftFragment" />
+    </fragment>
     <fragment
         android:id="@+id/menuFragment"
         android:name="com.example.assignment3.MenuFragment"
@@ -17,5 +21,13 @@
         <action
             android:id="@+id/action_menuFragment_to_promptFragment"
             app:destination="@id/promptFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/draftFragment"
+        android:name="com.example.assignment3.DraftFragment"
+        android:label="fragment_draft"
+        tools:layout="@layout/fragment_draft" >
+        <argument android:name="promptInput"
+            app:argType="string[]" />
     </fragment>
 </navigation>
