--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,12 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:cardElevation="10dp">
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp">
 
         <ImageView
             android:id="@+id/draftBackground"
@@ -18,7 +21,7 @@
             android:layout_alignBottom="@id/copyButton"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
-            android:layout_marginBottom="-5dp"
+            android:layout_marginBottom="0dp"
             app:srcCompat="@drawable/background_text_border" />
 
         <ImageView
@@ -41,7 +44,8 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp" />
+            android:layout_marginBottom="10dp"
+            android:paddingBottom="10dp" />
 
         <Button
             android:id="@+id/copyButton"
@@ -61,7 +65,6 @@
             android:layout_alignParentTop="true"
             android:layout_marginTop="5dp"
             android:gravity="center_horizontal"
-            android:text="TextView"
             android:textSize="30sp" />
 
     </RelativeLayout>
